[package]
name = "actixweb"
version = "0.1.0"
authors = ["gongbaodd@Inspiron <gongbaodd@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
listenfd = "0.3.3"
serde = { version = "1.0.104", features = ["derive"] }
