[package]
name = "actix_log"
version = "0.1.0"
authors = ["gongbaodd@Inspiron <gongbaodd@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
log = "0.4.8"
env_logger = "0.7.1"
