[package]
name = "graphql"
version = "0.1.0"
authors = ["gongbaodd@Inspiron <gongbaodd@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
diesel = "1.4.3"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.4"
juniper = "0.14.2"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.47"
actix-rt = "1.1.1"
log = "0.4.8"
