[package]
name = "graphql_only"
version = "0.1.0"
authors = ["gongbaodd@Inspiron <gongbaodd@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
env_logger = "0.7.1"
serde = "1.0.104"
serde_json = "1.0.47"
juniper = "0.14.2"
dotenv = "0.15.0"
