[package]
name = "rust_gtk"
version = "0.1.0"
authors = ["gongbaodd@Inspiron <gongbaodd@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.8.0"
gdk = "0.12.0"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]
